--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,16 @@ spring:
     url: jdbc:mysql://192.168.102.115:3306/cloud?serverTimezone=UTC # 数据库连接地址
     username: adcloud # 数据库用户名
     password: adcloud #数据库密码
+  redis:
+    cluster:
+      nodes: 192.168.101.72:6379,192.168.101.73:6379,192.168.101.74:6379
+    jedis:
+      pool:
+        max-active: 8 #连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1 #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 8 #连接池中的最大空闲连接
+        min-idle: 0 #连接池中的最小空闲连接
+    password: Znrt@2019
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml #配置映射文件
