--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
-            <version>1.1.9.RELEASE</version>
+<!--            <version>1.1.9.RELEASE</version>-->
         </dependency>
     </dependencies>
 
