--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
 <!--            <version>1.1.9.RELEASE</version>-->
         </dependency>
+        <!-- 阿里MQ -->
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>ons-client</artifactId>
+            <version>1.2.7.Final</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
