--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 数据源名称
 spring.datasource.name=defaultDataSource
 # 数据库连接地址
-spring.datasource.url=jdbc:mysql://192.168.102.115:3306/cloud?serverTimezone=UTC 
+spring.datasource.url=jdbc:mysql://db4.ops.bj1.uniev.com.cn:3306/cloud?serverTimezone=UTC 
 # 数据库用户名
 spring.datasource.username=adcloud
 # 数据库密码
