修改获取桩认证状态接口地址为可配置

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,5 @@ ThreadPoolExecutor.maximumPoolSize=100
 ThreadPoolExecutor.keepAliveTime=5
 
 StationId=33050000005
+
+ServerAddress=http://192.168.101.41:8080
